@@ -812,6 +812,7 @@ class Node(PersistentCached):
 			self.conn.domainEventRegisterAny(None, libvirt.VIR_DOMAIN_EVENT_ID_REBOOT, self.reboot_event, None),
 			self.conn.domainEventRegisterAny(None, libvirt.VIR_DOMAIN_EVENT_ID_MIGRATION_ITERATION, self.migration_event, None),
 			self.conn.domainEventRegisterAny(None, libvirt.VIR_DOMAIN_EVENT_ID_JOB_COMPLETED, self.job_event, None),
+			self.conn.domainEventRegisterAny(None, libvirt.VIR_DOMAIN_EVENT_ID_IO_ERROR_REASON, self.error_event, None),
 		]
 
 	def livecycle_event(self, conn, dom, event, detail, opaque):
@@ -926,6 +927,31 @@ class Node(PersistentCached):
 			except LookupError:
 				return
 			domStat.migration_status(stats)
+		except Exception:
+			log.error('%s: Exception handling callback', self.pd.uri, exc_info=True)
+			# don't crash the event handler
+
+	def error_event(self, conn, dom, srcpath, devalias, action, reason, opaque):
+		"""
+		Handle IO errors.
+		"""
+		log = logger.getChild('io')
+		try:
+			log.debug(
+				"Domain %s(%s) dev=%s[%s] action=%d reason=%s",
+				dom.name(),
+				dom.ID(),
+				devalias,
+				srcpath,
+				action,
+				reason,
+			)
+			uuid = dom.UUIDString()
+			try:
+				domStat = self.domains[uuid]
+			except LookupError:
+				return
+			domStat.pd.error = _('IO error "%(reason)s" on device "%(device)s"') % dict(reason=reason, device=devalias)
 		except Exception:
 			log.error('%s: Exception handling callback', self.pd.uri, exc_info=True)
 			# don't crash the event handler
@@ -1092,6 +1118,7 @@ class Node(PersistentCached):
 					'description': descr,
 					'node_available': self.pd.last_try == self.pd.last_update,
 					'status': pd.status,
+					'error': pd.error,
 				})
 
 		return domains
@@ -1755,6 +1782,7 @@ def domain_state(uri, domain, state):
 					node.wait_update(domain, stat_key)
 
 			dom_stat.pd.status = ''
+			dom_stat.pd.error = ''
 	except KeyError as ex:
 		logger.error("Domain %s not found", ex)
 		raise NodeError(_('Error managing domain "%(domain)s"'), domain=domain)
